[RBOY-63] Hidden text on mobile and tablet, fix link in the footer

--- a/src/scss/modules/_blog.scss
+++ b/src/scss/modules/_blog.scss
@@ -180,6 +180,12 @@
       width: 100%;
     }
 
+    @media (max-width: 992px) {
+      .blog-body {
+        display: none;
+      }
+    }
+
     p {
       color: $white;
       font-family: $font-family-global;
